[package]
name = "superdev-quiz"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
base64 = "0.22.1"
bs58 = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
solana-sdk = "2.3.1"
spl-token = "8.0.0"
tokio = { version = "1.45.1", features = ["full"] }
